fix spacing on mobile for content-box on about page content: note: needs addressing

--- a/sites/www/src/assets/styles/_base.scss
+++ b/sites/www/src/assets/styles/_base.scss
@@ -95,6 +95,10 @@ body {
   font-family: var(--font-primary);
   transition: all 400ms ease-out;
 }
+
+main {
+  padding-top: var(--size-200);
+}
 ._pb-0 {padding-bottom:0;}
 
 [disabled] {
