--- a/sites/www/src/assets/styles/components/_navigation.scss
+++ b/sites/www/src/assets/styles/components/_navigation.scss
@@ -15,7 +15,7 @@
     flex-direction: column;
     // font-family: 'Playfair Display';
     padding-right: var(--size-200);
-    padding-left: var(--size-200);
+    // padding-left: var(--size-200);
     text-transform: uppercase;
     line-height: 1.15;
     
